<resources>
    <string name="app_name">Makes360 - Your IT Partner</string>
    <string name="todo">TODO</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_message">It seems you\'re offline. Please check your internet connection and try agian.</string>

    <string name="splash_quote">Your IT Partner</string>
    <string name="splash_footer">AGI Innovations Makes360 Private Limited</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_user_email">info@makes360.com</string>
    <string name="title_user_website">CIN: U62099PB2024PTC062040</string>

    <!--    Navigation Drawer-->
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="app_logo">App Logo</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="client_login">Client Login</string>
    <string name="intern_emp_login">Intern/Emp Login</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="intern_login">Intern Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="login">Login</string>
    <string name="apply_for_internship">Apply for Internship</string>
    <string name="pick_date">Pick Date</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="previous_announcements">Previous Announcements</string>
    <string name="full_name">Full Name</string>
    <string name="your_email_id">Your Email Id</string>
    <string name="position">Position</string>
    <string name="intern_emp_id">Intern/Emp Id</string>
    <string name="log_out">Log Out</string>
    <string name="recent_announcement">Recent Announcement</string>
    <string name="mark_as_read">Mark As Read</string>
    <string name="monthly_stipend">Monthly Stipend</string>
    <string name="quotationUp">❝</string>
    <string name="quotationDown">❞</string>
    <string name="loading">Loading…</string>
    <string name="raise_a_complaint">Raise a Complaint</string>
    <string name="salary_stipend_note">
    &#8226; The salary or stipend will be prepared on the first workday after the 20th of each month. If you find any issues, let us know by the 25th of the month.\n
    &#8226; Your pay will be put into your account on the 1st of each month, or the next workday if the 1st is a weekend or holiday.\n
    &#8226; Once your pay is in your account, the company won\'t make any changes.\n
    &#8226; The pay period is from the 20th of one month to the 20th of the next.
    </string>
    <string name="salary_stipend_history">Salary/Stipend History</string>
    <string name="stipend_no_record">No Record Found! Record will be updated after the first stipend.</string>
    <string name="stipend_details">Stipend Details</string>
    <string name="internship_id">Intern/Employee ID:</string>
    <string name="job_role">Job Role:</string>
    <string name="current_stipend">Current Stipend/Salary:</string>
    <string name="log_hour">Total Log Hour:</string>
    <string name="paid_leave">Earned/Paid Leave:</string>
    <string name="misinformed_leave">Misinformed Leave:</string>
    <string name="cl_other_leave">CL/SL/ML:</string>
    <string name="deadlines_missed">Deadlines Missed</string>
    <string name="cost">Cost to Company:</string>
    <string name="remarks">Remarks:</string>
    <string name="advance_payment">Payroll Advance</string>
    <string name="amount">Amount:</string>
    <string name="bonus">Bonus/Reward/Reimbursement</string>
    <string name="payment">Gross Earning</string>
    <string name="payment_status">Payment Status:</string>
    <string name="date_of_payment">Date of Payment:</string>
    <string name="method">Method:</string>
    <string name="bank_ac_no">Bank Ac No:</string>
    <string name="ifsc_code">IFSC Code:</string>
    <string name="note">Note</string>
    <string name="profile">Profile</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="category_name">Category Name</string>
    <string name="view">View</string>
    <string name="detail_name">Detail Name</string>
    <string name="detail_value">Detail Value</string>
    <string name="intern_handbook">Intern Handbook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="project_name">Project Name</string>
    <string name="current_status">Current Status:</string>
    <string name="in_progress">In Progress 🛠️</string>
    <string name="start_date">Start Date:</string>
    <string name="first_renewal_date">First Renewal Date:</string>
    <string name="renewal_period">Renewal Period:</string>
    <string name="project_note">Project Note:</string>
    <string name="gst_no">GST No:</string>
    <string name="project_list">Project List</string>
    <string name="view_all">View All</string>
    <string name="project_assets">Project Assets</string>
    <string name="other_assets">Other Assets</string>
    <string name="social_media_assets">Social Media Assets</string>
    <string name="source_code">Source Code</string>
    <string name="ssl_certificate">SSL Certificate</string>
    <string name="database">Database</string>
    <string name="business_email">Business Email</string>
    <string name="hosting">Hosting</string>
    <string name="domain">Domain</string>
    <string name="refresh_content">Refresh Content</string>
    <string name="no_project_assets">No Project Assets</string>
    <string name="no_assets_available_for_this_project_yet">No assets available for this project yet</string>
    <string name="contact_log">Contact Log</string>
    <string name="no_contact_log">No Contact Log</string>
    <string name="no_contact_log_available_for_this_project_yet">No Contact Log available for this project yet</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="let_s_get_started">Let\'s get started! 🚀</string>
    <string name="admin_login">Admin Login</string>
    <string name="ready_to_take_on_the_day">Ready to take on the day? 💪</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="announcements">Announcements</string>
    <string name="offer_letter">Offer Letter</string>
    <string name="makes360_trainee">Makes360 Trainee</string>
    <string name="trainee_intern">Trainee Intern</string>
    <string name="last_login">Last Login</string>
    <string name="fee_info">Fee Info</string>
    <string name="registration_fee">Registration Fee</string>
    <string name="trnx_id">Trnx ID:</string>
    <string name="status">Status:</string>
    <string name="_1st_installment">1st Installment</string>
    <string name="_6000">₹ 6000.00</string>
    <string name="due_details">
    &#8226; Due in the first week of March.\n&#8226; Details will be shared soon.\n&#8226; All applicable discounts will be applied to this installment.
    </string>
    <string name="_2nd_installment">2nd Installment</string>
    <string name="more_info">More Info</string>
    <string name="close">Close</string>
    <string name="support">Support</string>
    <string name="trainee_login">Trainee Login</string>
    <string name="trainee_login_all_colleges">Trainee Login (All Colleges)</string>
    <string name="company_brochure_pdf">Company Brochure (PDF)</string>
    <string name="footer_text">%1$d © AGI Innovations Makes360 Private Limited</string>
    <string name="toolbar_title">Hi %1$s</string>
    <string name="delete_account">Delete Account</string>
    <string name="follow_us">Follow Us</string>
    <string name="view_details">View Details</string>
    <string name="service_history">Service History</string>
    <string name="no_service_history_description">No Service History available for this project yet</string>
    <string name="no_service_history">No Service History</string>
    <string name="fee_info_reg_info">Fee Info/Reg Info</string>
    <string name="trainee_support_message">❗ Please avoid texting or calling other office numbers as they are dedicated to other operations.</string>
    <string name="hr_mail">👉 hr@makes360.com</string>
    <string name="contact_number">👉 +91 77810 84258 \n(Call Only - 10 AM to 6 PM)</string>
    <string name="whatsapp_number">👉 +91 98766 81531\n(WhatsApp Only - 24x7)</string>
    <string name="helpline_for_training">📞 Helpline for Training:</string>
    <string name="attention_students">📢 Attention Students:</string>
    <string name="completed">Completed 🎯</string>
    <string name="awaiting_feedback">Awaiting Feedback 📩</string>
    <string name="not_started">Not Started ⏳</string>
    <string name="testing">Testing ⚙️</string>
    <string name="no_tasks_found">No Tasks Found</string>
    <string name="end_date">End Date</string>
    <string name="start_date_new">Start Date</string>
    <string name="tasks_list">Tasks List</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="urgent">Urgent</string>
    <string name="credentials">Credentials</string>
    <string name="no_credentials">No Credentials</string>
    <string name="no_credentials_found_for_this_project">No Credentials Found for this project.</string>

    <style name="announcement_already_read">"Great! You Read It"</style>
</resources>