<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/swipeRefreshLayout"
    tools:context=".ui.intern.InternTaskAssign">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/internTaskAssignToolbar"
            android:layout_width="match_parent"
            app:menu="@menu/filter_menu"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_gradient_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:src="@drawable/ic_back" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/titleToolbarTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="@string/tasks_list"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

        </androidx.appcompat.widget.Toolbar>

        <HorizontalScrollView
            android:id="@+id/statusFilterScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingTop="@dimen/_4sdp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/internTaskAssignToolbar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/filterNotStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white"
                    app:strokeColor="@color/black"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/filterNotStartedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/not_started"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/filterInProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/filterInProgressTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/in_progress"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/filterTesting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/filterTestingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/testing"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/filterFeedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/filterFeedbackTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/awaiting_feedback"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/filterCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/filterCompletedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/completed"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/priorityFilterScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusFilterScrollView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/lowStatusCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white"
                    app:strokeColor="@color/black"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/lowStatusTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/low"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mediumStatusCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mediumStatusTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/medium"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/highStatusCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/highStatusTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/high"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/urgentStatusCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/urgentStatusTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/urgent"
                        android:textColor="@color/primary_text" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </HorizontalScrollView>

        <!-- Task RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priorityFilterScrollView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noTaskFoundLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priorityFilterScrollView">

            <ImageView
                android:id="@+id/noTaskImageView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:contentDescription="@string/todo"
                android:src="@drawable/no_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noTaskText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_18sdp"
                android:fontFamily="@font/default_font"
                android:gravity="center"
                android:text="@string/no_tasks_found"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_26sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noTaskImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/progressOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#9A000000"
            android:elevation="@dimen/_6sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loader" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
